# AndroidZebra

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/shurik/droidzebra/: DroidZebraTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  droidzebra-autop.c  droidzebra-json.h  droidzebra-msg.c  droidzebra-msg.h
app/src/main/cpp/zebra/: getcoeff.c
app/src/main/java/com/droid/zebra/: BoardView.java  CommonUtils.java  Constants.java  EngineError.java  SettingsActivity.java  SettingsFragment.java  StatusView.java  ZebraActivity.java  ZebraEngine.java
app/src/main/java/com/shurik/droidzebra/: BoardView.java  CommonUtils.java  (+9 more)
app/src/main/jni/: droidzebra-display.c  droidzebra-jni.c  droidzebra-json.c  droidzebra.h
app/src/main/jni/zebra/: thordb.c
app/src/main/res/drawable/: ic_back.xml  ic_forward.xml  ic_play.xml  ic_switch.xml
app/src/main/res/layout/: activity_settings.xml  board_layout.xml  gameover.xml  spash_layout.xml
app/src/main/res/menu/: menu.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml
app/src/main/res/values-fr/: arrays_fr.xml  strings_fr.xml
app/src/main/res/values-ja/: arrays_ja.xml  strings_ja.xml
app/src/main/res/values-ko/: arrays-ko.xml  strings_ko.xml
app/src/main/res/values-ru/: arrays_ru.xml  strings_ru.xml
app/src/main/res/values-v11/: themes.xml
app/src/main/res/values-zh/: arrays.xml  strings.xml
app/src/main/res/xml/: settings.xml
gradle/wrapper/: gradle-wrapper.properties
